@@ -30,6 +30,6 @@ EBUILD vmware-modules-1.0.0.16-r1.ebuild 350 RMD160 1be5daf6e1bbf0a83dace59330e3
 EBUILD vmware-modules-1.0.0.17-r1.ebuild 459 RMD160 2ef0f8d190cec299cccf440e7cc53aea95000f1d SHA1 86d85a23f0574a33da06309e8d470b89ceff5fac SHA256 0701e46f0b3cf2fb1bbc20d3b3eb8a6be680889ed3bcc8c06aa8e905a9be74fb
 EBUILD vmware-modules-1.0.0.18.ebuild 621 RMD160 cded1e0eb365ce53e41054320850293f2f4d2d0d SHA1 f38941824506ee4024940a01394d6da9a108e28b SHA256 f89c7d3eae7ce74743094b75883faad058946d54ba861f3fe39c5b363c271309
 EBUILD vmware-modules-1.0.0.19.ebuild 793 RMD160 3f07a0dbaa31d7a8f7986d6f42cd4f980b9465e4 SHA1 45521730825d4250675a5493720be6c8ec7861c7 SHA256 decdd9597121c48bd318fab7ddbd74aaa7a2381c5f5383c3d3940648c58fdd64
-EBUILD vmware-modules-1.0.0.20.ebuild 1339 RMD160 93f61c760a30e3649f9beb58dd88406179697def SHA1 e10fe6a6217ef90fde9f2e393802adcd934bac91 SHA256 0d8d037386884154aa140418a370423d1ae041b9b283e002df42b314d8c76ce7
+EBUILD vmware-modules-1.0.0.20.ebuild 1339 RMD160 7a141661463bffe8b5f4ed91283c03c40603e7a7 SHA1 ed5dd553b59486cbac1ebdf435655c1758550399 SHA256 f35afa34477afbce0c8bccb9d22b1359d4a54dd762866e32cb7b823487a9a066
 EBUILD vmware-modules-1.0.0.21.ebuild 793 RMD160 024536d2da0925217b8d61e64fbb2ff4d7e3f75b SHA1 f493d54e81db0f236d04968bb839405300567572 SHA256 b4e7f8c9fd707b0263eb9d8617afc375590ef3241b0d25e3877692a3a066578d
 MISC metadata.xml 159 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 SHA1 f46b02a39bcd0165558de67ff4256cfc812418a3 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215
