@@ -5,7 +5,7 @@
 KEYWORDS="~amd64 ~x86"
 VMWARE_VER="VME_V604" # THIS VALUE IS JUST A PLACE HOLDER
 
-inherit eutils linux-info vmware-mod 
+inherit eutils vmware-mod 
 
 VMWARE_MODULE_LIST="vmmon vmnet vmblock"
 SRC_URI="x86? ( mirror://vmware/software/vmplayer/VMware-player-2.0.4-93057.i386.tar.gz )
@@ -16,10 +16,9 @@ kernel_check() {
 	get_version
 	ebegin "Checking kernel options"
 	if kernel_is 2 6 ; then
-		if ! { linux_chkconfig_present UNUSED_SYMBOLS; }; then
-			ewarn "[UNUSED_SYMBOLS] is not set in the kernel."
-		else
-			einfo "[UNUSED_SYMBOLS].... is enabled in your kernel :-)"
+		if [ $KV_PATCH -gt 24 ];
+		then
+		  $(linux_chkconfig_present UNUSED_SYMBOLS) && einfo "[UNUSED_SYMBOLS] is enabled in your kernel" || ewarn "[UNUSED_SYMBOLS] is not enabled in the kernel"
 		fi
 	fi
 	eend $?
